--- a/css/style.css
+++ b/css/style.css
@@ -294,3 +294,49 @@ padding: 10px 28px;
 .tomato_li ul{
   padding-left: 20px;
 }
+.main_contact{
+  background: #E5E5E5;
+  color: #324950;
+  font-size: 17px;
+  padding-bottom: 50px;
+}
+.main_contact h1{
+  padding-top: 51px;
+  padding-bottom: 30px;
+  font-size: 44px;
+}
+.main_contact p{
+  padding-top: 20px;
+  margin-bottom: 10px;
+}
+.main_contact button{
+  background: #57984c;
+  color: white;
+  border: none;
+  font-size: 17px;
+  line-height: 200%;
+  border-radius: 60px;
+  padding: 11px 56px;
+}
+.main_contact textarea{
+  height: 314px;
+}
+.m_contact{
+  color: #324950;
+  text-align: center;
+  padding-bottom: 41px;
+  line-height: 150%;
+}
+.m_contact h5{
+  margin: auto;
+  font-size: 20px;
+  color: #57984C;
+  padding-top: 44px;
+  padding-bottom: 12px;
+  border-bottom: solid 1px;
+  width: 183px;
+  margin-bottom: 17px;
+}
+.m_contact span{
+  color: #57984C;
+}
