--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ button {
   display: block;
 }
 .head1 {
-  background: url("../images/bg.png");
+  background: url("../images/bg.png") no-repeat;
   height: 850px;
-  background-repeat: no-repeat;
   background-position-x: center;
 }
 .head {
@@ -57,7 +56,7 @@ button {
 }
 .Products {
   padding-top: 35px;
-  height: 170px;
+  height: 100%;
   text-align: center;
 }
 .Products a {
@@ -73,7 +72,6 @@ button {
 }
 
 .Vision-Mission h1 {
-  padding-top: 100px;
   font-size: 64px;
 }
 
@@ -250,13 +248,6 @@ padding-bottom:40px ;
 .main_tr h1{
   font-size: 30px;
 }
-.tom_ch{
-  font-size: 20px;
-  color: #57984C;
-  padding-bottom: 12px;
-  border-bottom: solid 1px;
-  width: 183px;
-}
 .tomato_li{ 
   color: #324950;
   font-size: 17px;
@@ -275,7 +266,7 @@ padding-bottom:40px ;
   border: 2px solid;
   border-radius: 60px;
   display: inline-flex;
-padding: 10px 28px;
+  padding: 10px 28px;
 }
 .i_circle p{
   margin: auto;
