--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ h5 {
   padding-bottom: 90px;
 }
 .main_t {
-  background-color: #FCF0F0;
+  background-color: #f1e6de;
   color: #324950;
 }
 .main_t h1 {
@@ -197,6 +197,7 @@ h5 {
   background-color: #ffffff;
   color: #57984c;
   padding-bottom: 5px;
+  max-width: 350px;
 }
 .col_tomat h3{
   color: #57984c;
